mpi_montsqr fix for GNU/Linux.

--- a/src/Makefile
+++ b/src/Makefile
@@ -34,7 +34,7 @@ USE_EVENTFLAG = yes
 ifeq ($(EMULATION),)
 DEFS += -DFLASH_UPGRADE_SUPPORT
 else
-DEFS += -DBN256_C_IMPLEMENTATION
+DEFS += -DBN256_C_IMPLEMENTATION -DBIGNUM_C_IMPLEMENTATION
 endif
 
 ifneq ($(ENABLE_DEBUG),)
