--- a/docker/Dockerfile.release
+++ b/docker/Dockerfile.release
@@ -3,4 +3,4 @@ LABEL Description="Image for building gnuK"
 
 RUN apt update -y && apt install -y make gcc-arm-none-eabi && apt clean
 
-CMD ["/bin/sh", "-c", "cd /gnuk/src && make clean && ./configure $GNUK_CONFIG && make"]
+CMD ["/bin/sh", "-c", "cd /gnuk/regnual && make clean && make && cd /gnuk/src && make clean && ./configure $GNUK_CONFIG && make"]
