Docker: copy build results to ./release/git-version
Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/docker/Dockerfile.release
+++ b/docker/Dockerfile.release
@@ -3,4 +3,9 @@ LABEL Description="Image for building gnuK"
 
 RUN apt update -y && apt install -y make gcc-arm-none-eabi && apt clean
 
-CMD ["/bin/sh", "-c", "cd /gnuk/regnual && make clean && make && cd /gnuk/src && make clean && ./configure $GNUK_CONFIG && make"]
+# takes 100 MB of space more
+RUN apt install -y git && apt clean
+
+WORKDIR /gnuk/
+
+CMD ["/bin/sh", "-c", "cd /gnuk/regnual && make clean && make && cd /gnuk/src && make clean && ./configure $GNUK_CONFIG && make && mkdir -p /gnuk/release/`git describe --long`/ && cp /gnuk/src/build/gnuk.bin /gnuk/regnual/regnual.bin /gnuk/release/`git describe --long`/ -v"]
