Fix for ack button driver and configuration.

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -7,5 +7,6 @@
 @PINPAD_MORE_DEFINE@
 @CERTDO_DEFINE@
 @HID_CARD_CHANGE_DEFINE@
-@SERIALNO_STR_LEN_DEFINE@
 @LIFE_CYCLE_MANAGEMENT_DEFINE@
+@ACKBTN_DEFINE@
+@SERIALNO_STR_LEN_DEFINE@
