--- a/docker/Dockerfile.debug
+++ b/docker/Dockerfile.debug
@@ -1,4 +1,4 @@
 FROM gnuk:latest
 LABEL Description="Image for building gnuK with debugging"
 
-RUN apt install -y gdb-arm-none-eabi && apt clean
+RUN apt update && apt install -y gdb-arm-none-eabi && apt clean
