Build: correct setting symlink

--- a/docker/Dockerfile.release
+++ b/docker/Dockerfile.release
@@ -8,4 +8,4 @@ RUN apt install -y git && apt clean
 
 WORKDIR /gnuk/
 
-CMD ["/bin/sh", "-c", "cd /gnuk/src && ./configure $GNUK_CONFIG && cd /gnuk/regnual && make clean && make && cd /gnuk/src && make clean && ./configure $GNUK_CONFIG && make && mkdir -p /gnuk/release/`git describe --long`/ && cp /gnuk/src/build/gnuk.* /gnuk/regnual/regnual.bin /gnuk/release/`git describe --long`/ -v && git describe --long >/gnuk/release/.last && cd /gnuk/release && ln -sf `git describe --long` last-build" ]
+CMD ["/bin/sh", "-c", "cd /gnuk/src && ./configure $GNUK_CONFIG && cd /gnuk/regnual && make clean && make && cd /gnuk/src && make clean && ./configure $GNUK_CONFIG && make && mkdir -p /gnuk/release/`git describe --long`/ && cp /gnuk/src/build/gnuk.* /gnuk/regnual/regnual.bin /gnuk/release/`git describe --long`/ -v && git describe --long >/gnuk/release/.last && cd /gnuk/release && rm last-build && ln -sf `git describe --long` last-build" ]
