--- a/src/gnuk.ld.in
+++ b/src/gnuk.ld.in
@@ -128,6 +128,14 @@ SECTIONS
         LONG(0xffffffff);
         . += 1920;
         . = ALIGN (@FLASH_PAGE_SIZE@);
+        ch_certificate_start1 = .;
+        LONG(0xffffffff);
+        . += 1920;
+        . = ALIGN (@FLASH_PAGE_SIZE@);
+        ch_certificate_start2 = .;
+        LONG(0xffffffff);
+        . += 1020;
+        . = ALIGN (@FLASH_PAGE_SIZE@);
     } > flash =0xffffffff
 @CERTDO_SUPPORT_END@
 
@@ -156,9 +164,6 @@ SECTIONS
         . = ALIGN(@FLASH_PAGE_SIZE@);
         . += 1024;
         . = ALIGN(@FLASH_PAGE_SIZE@);
-        _updatekey_store1 = .;
-        . += 1024;
-        . = ALIGN(@FLASH_PAGE_SIZE@);
         _data_pool1 = .;
         KEEP(*(.gnuk_data1))
         . = ALIGN(@FLASH_PAGE_SIZE@);
@@ -169,9 +174,6 @@ SECTIONS
         . = ALIGN(@FLASH_PAGE_SIZE@);
         . += 1024;
         . = ALIGN(@FLASH_PAGE_SIZE@);
-        . += 1024;
-        . = ALIGN(@FLASH_PAGE_SIZE@);
-        _updatekey_store2 = .;
         . += 1024;
         . = ALIGN(@FLASH_PAGE_SIZE@);
         _data_pool2 = .;
