Add helper build command

--- a/release/Makefile
+++ b/release/Makefile
@@ -19,4 +19,7 @@ flash: $(FLASH_FILE)
 reset:
 	STM32_Programmer_CLI -c port=SWD -halt -rst
 
+.PHONY: build
+build:
+	cd ../docker/ && sudo env GNUK_CONFIG="--target=NITROKEY_START --vidpid=20a0:4211 --enable-factory-reset --enable-certdo"  make
 
