--- a/release/Makefile
+++ b/release/Makefile
@@ -24,3 +24,6 @@ GNUK_CONFIG=--target=NITROKEY_START --vidpid=20a0:4211 --enable-factory-reset --
 build:
 	cd ../docker/ && sudo env GNUK_CONFIG="${GNUK_CONFIG}"  make
 
+.PHONY: status
+status:
+	cd ../tool/ && python3 usb_strings.py
