Package info update

--- a/tool/Pipfile
+++ b/tool/Pipfile
@@ -6,8 +6,9 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-pyusb = "*"
-cffi = "*"
+pyusb = "==1.0.2"
+cffi = "==1.14.0"
+requests = "==2.23.0"
 
 [requires]
 python_version = "3"
