--- a/release/Makefile
+++ b/release/Makefile
@@ -2,11 +2,12 @@ FIRMWARE_DIR=$(shell readlink -f last-build)
 FLASH_FILE=$(FIRMWARE_DIR)/gnuk.hex
 TOOLS=../tool
 PASS=12345678
+V=0
 all: update
 
 .PHONY: update
 update:
-	cd $(TOOLS) && ./upgrade_by_passwd.py -p ${PASS} --regnual $(FIRMWARE_DIR)/regnual.bin --gnuk ${FIRMWARE_DIR}/gnuk.bin -y
+	cd $(TOOLS) && ./upgrade_by_passwd.py -p ${PASS} --regnual $(FIRMWARE_DIR)/regnual.bin --gnuk ${FIRMWARE_DIR}/gnuk.bin -y -v ${V}
 	@echo "Note: power cycle might be needed due to setting RDP flag on MCU, which stalls it"
 
 .PHONY: flash
