--- a/release/Makefile
+++ b/release/Makefile
@@ -24,7 +24,7 @@ reset:
 GNUK_CONFIG=--target=NITROKEY_START --vidpid=20a0:4211 --enable-factory-reset --enable-certdo
 .PHONY: build
 build:
-	touch last-build
+	sudo touch last-build
 	cd ../docker/ && sudo env GNUK_CONFIG="${GNUK_CONFIG}"  make
 
 .PHONY: status
