--- a/tool/Pipfile
+++ b/tool/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 [packages]
 pyusb = "==1.0.2"
 cffi = "==1.14.0"
-requests = "==2.23.0"
+requests = "*"
 hidapi = "*"
 
 [requires]
