--- a/src/gnuk.ld.in
+++ b/src/gnuk.ld.in
@@ -31,7 +31,7 @@ SECTIONS
 	. = ALIGN(1024);    /* up until 3rd kB */
 	*(.sys.1)           /* 3rd kB */
 	*(.sys.2)           /* 4th kB */
-    } > flash0
+    } > flash0 =0x42424242
 
     _text = .;
 
